# unifi-tlsg

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: unifi-tlsg.example.yaml
docs/: ARCHITECTURE.md
docs/plans/: 01-lab-validation.md  02-inform-hardening.md  03-cli-backend.md  04-config-apply.md  05-telemetry-topology.md  06-testing.md  07-packaging-ops.md  README.md  issues.json
src/unifi_tlsg/: __init__.py  __main__.py  cli.py  config.py  daemon.py
src/unifi_tlsg/backend/: __init__.py  base.py
src/unifi_tlsg/backend/cli/: __init__.py  parser.py  session.py  tlsg.py
src/unifi_tlsg/inform/: __init__.py  client.py  discovery.py  handlers.py  payloads.py  protocol.py
src/unifi_tlsg/mapping/: __init__.py  ports.py
src/unifi_tlsg/models/: __init__.py  profiles.yaml  registry.py
tests/: test_mapping.py  test_parser.py  test_protocol.py
tests/fixtures/: show_interface_status.txt  show_interface_switchport.txt  show_mac_table.txt
