[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifi-tlsg"
version = "0.1.0"
description = "UniFi Inform proxy for TP-Link TL-SG smart switches (CLI-backed)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "benklop" }]
keywords = ["unifi", "tp-link", "tl-sg2424", "inform", "switch"]
dependencies = [
  "cryptography>=42.0.0",
  "paramiko>=3.4.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
unifi-tlsg = "unifi_tlsg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi_tlsg"]

[tool.hatch.build.targets.wheel.force-include]
"src/unifi_tlsg/models/profiles.yaml" = "unifi_tlsg/models/profiles.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
